# QWGraphKernel

./: CMakeLists.txt  INSTALL.md  PAPERREF.md  README.md
SpinNetwork/: GraphGenerator.py  bloch.py  randomGraph.py  test.py  test1.py  visual.py
lib/: Circuit.cpp  Circuit.h  CppTest.cpp  CppTest.h  Encoding.cpp  Encoding.h
main/: TimeMatrices.py  dataPlot.py  hodgeLaplacian.py  kernel.py  lib.py  main.py  matrix_list_3.npz  matrix_list_5.npz  matrix_list_9.npz  parallel.py  pl.py  test.py  trainSVM.py
qw/: classical.py  hodgeLaplacian.py  probState.py
script/: BellState.py  MUTAG.py  QiskitLearn.py  README.md  densityMatrix.py  evolution.py  main.py  measurement.py  randomCircuits.py
src/: main.cpp  qpe.cpp  unitary.cpp
test/: coraVisual.py  kernelKmeans.py  pendigits.py
timeEvolution/: matrix_list_0.npz  matrix_list_1.npz  matrix_list_2.npz  matrix_list_4.npz  matrix_list_6.npz  matrix_list_7.npz  matrix_list_8.npz
visualizationScript/: example.py  kernel.py  lib.py  main.py  pl.py  test.py
